--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -479,6 +479,14 @@ tests:
   steps:
     cluster_profile: ibmcloud
     workflow: openshift-e2e-ibmcloud
+- as: e2e-metal-upi
+  optional: true
+  run_if_changed: (^(data/.*|pkg/.*|images)/baremetal/)
+  steps:
+    cluster_profile: packet
+    env:
+      CLUSTER_VARIANT: ovn
+    workflow: openshift-e2e-metal-upi
 zz_generated_metadata:
   branch: master
   org: openshift
